cleaned up scripts!

--- a/projects/index.html
+++ b/projects/index.html
@@ -75,19 +75,18 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
 
             <div class="page-content-item-text">
               <p>
-                <a href="project-euler">
-                  This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
-                </a>
+                This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
               </p>
             </div>
           </div>
 
           <!-- Lead page item element ends here. -->
+          
           <div class="page-content-item">
 
             <div class="page-content-item-title">
               <h3>
-                <a href="project-euler">Project Euler</a>
+                <a href="project-1512wed">Project Euler</a>
               </h3>
             </div>
 
@@ -99,40 +98,10 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
 
             <div class="page-content-item-text">
               <p>
-                <a href="project-euler">
-                  This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
-                </a>
+                This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
               </p>
             </div>
           </div>
-
-
-
-
-
-          <div class="page-content-item">
-
-            <div class="page-content-item-title">
-              <h3>
-                <a href="project-euler">Project Euler</a>
-              </h3>
-            </div>
-
-            <div class="page-content-item-tags">
-              <button type="button" class="btn btn-default btn-xs tag-button">python</button>
-              <button type="button" class="btn btn-default btn-xs tag-button">math</button>
-              <button type="button" class="btn btn-default btn-xs tag-button">euler</button>
-            </div>
-
-            <div class="page-content-item-text">
-              <p>
-                <a href="project-euler">
-                  This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
-                </a>
-              </p>
-            </div>
-          </div>
-
           
           <!-- All page item elements end here -->
 
