cleaned up scripts!

--- a/projects/index.html
+++ b/projects/index.html
@@ -75,33 +75,12 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
 
             <div class="page-content-item-text">
               <p>
-                This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
+                This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 25ish are currently documented here.
               </p>
             </div>
           </div>
 
           <!-- Lead page item element ends here. -->
-          
-          <div class="page-content-item">
-
-            <div class="page-content-item-title">
-              <h3>
-                <a href="project-1512wed">Project Euler</a>
-              </h3>
-            </div>
-
-            <div class="page-content-item-tags">
-              <button type="button" class="btn btn-default btn-xs tag-button">python</button>
-              <button type="button" class="btn btn-default btn-xs tag-button">math</button>
-              <button type="button" class="btn btn-default btn-xs tag-button">euler</button>
-            </div>
-
-            <div class="page-content-item-text">
-              <p>
-                This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 20 are currently documented here.
-              </p>
-            </div>
-          </div>
           
           <!-- All page item elements end here -->
 
