--- a/resources/primary-top-title.html
+++ b/resources/primary-top-title.html
@@ -1,1 +1,7 @@
-<a href="/"><h1>David Chen</h1><h4>software developer</h4></a>
+<a href="/"><h1>David Chen</h1><h4 class="hidden-xs">software developer</h4></a>
+<div class="row">
+	<div class="col-xs-3"><h5><a href="/projects">projects</a></h5></div>
+	<div class="col-xs-3"><h5><a href="/blog"><s>blog</s></a></h5></div>
+	<div class="col-xs-3"><h5><a href="/misc">misc.</a></h5></div>
+	<div class="col-xs-3"><h5><a href="/contact">contact</a></h5></div>
+</div>
