mobile nav bar now online

--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -38,20 +38,20 @@
  @@   @`   @;    @@    @@  #@ @@  '@ +@`  @@        @#    ,@,  `@+@ ;@ #@  #@   @@   @+'@   @@ '@  @@   +@   @#  `@:.@;     @#  @@`@#+@@@ #@  ,@                        
  @'  @@   .@     @@    @'  @@ @#  @@ #@   @;       .@,    +@`  ;@#@ #@ @' `@,   @@  ,@,@@  `@' ,@`.@,   @@   @'  +@ '@     .@`  @#,@'';`  @#  #@                        
  @; .@@   +@     @;   `@`  @# @' ;@@ @@  #@   @@   .@'    +@`  @@## @; @. @@    @@  @@`@@  @@:  @:@@    @#   @' .@@ '@.    '@  `@,,@      @#  @@                        
- @@+@@@   #@'+`  @@+@ '@   @. @@@@@@ @@;@@:  ,@@.   @@@@@ `@@#@@`@: @.`@ +@     @@+@+@ '@#@#@.  @@@     @@'@ @@+@'@ `@@@@@ @@  :  @@;'@ `@:  @#                        
- `@+ @+    +@'   ,#@' '+  ,'` :@+ '; ;#@+`    #+     +@#;  .#@'  '``+ ,'`@:      ##,.+  +@; +   ++      ,##: `##`,'   +@+: ''  '  `+##' .'   ',                        
-    ,@`                                                                 @@                                                                                             
+ @@+@@@   #@'+`  @@+@ '@   @. @@@@@@ @@;@@:  ,@@.   @@@@@ `@@#@@`@: @.`@ +@     @@+@+@ '@#@#@.  @@@     @@'@ @@+@'@ `@@@@@ @@  :@  @@;'@ `@:  @#                        
+ `@+ @+    +@'   ,#@' '+  ,'` :@+ '; ;#@+`    #+     +@#;  .#@'  '``+ ,'`@:      ##,.+  +@; +   ++      ,##: `##`,'   +@+: ''  '+  `+##' .'   ',                        
+    ,@`                                                                 @@                                                                                              
  @@@@@                                                                                                                                                                  
  :++,
 
 Please don't use my code without my permission. Or just steal it. I don't care. -Insert crying emoji-.
- -->
+ -->  
   <div class="container">
     <div class="row text-center title-text" id="topTitleContent"></div>
     
     <div class="row links-and-content">
 
-      <div class="home-page-links col-sm-3 text-left" id="homePageLinksContent"></div>
+      <div class="home-page-links col-sm-3 text-left hidden-xs" id="homePageLinksContent"></div>
 
       <div class="page-content col-sm-9">
 
