--- a/resources/primary-top-title.html
+++ b/resources/primary-top-title.html
@@ -1,7 +1,13 @@
 <a href="/"><h1>David Chen</h1><h4 class="hidden-xs">software developer</h4></a>
-<div class="row">
-	<div class="col-xs-3"><h5><a href="/projects">projects</a></h5></div>
-	<div class="col-xs-3"><h5><a href="/blog"><s>blog</s></a></h5></div>
-	<div class="col-xs-3"><h5><a href="/misc">misc.</a></h5></div>
-	<div class="col-xs-3"><h5><a href="/contact">contact</a></h5></div>
+<div class="row hidden-sm hidden-md hidden-lg sm-size-link-wrap">
+	<div class="col-xs-2"></div>
+	<div class="col-xs-4"><a href="/projects"><h5 class="sm-size-link">projects</h5></a></div>
+	<div class="col-xs-4"><a href="/blog"><h5 class="sm-size-link"><s>blog</s></h5></a></div>
+	<div class="col-xs-2"></div>
+</div>
+<div class="row hidden-sm hidden-md hidden-lg sm-size-link-wrap">
+	<div class="col-xs-2"></div>
+	<div class="col-xs-4"><a href="/misc"><h5 class="sm-size-link">misc</h5></a></div>
+	<div class="col-xs-4"><a href="/contact"><h5 class="sm-size-link">contact</h5></a></div>
+	<div class="col-xs-2"></div>
 </div>
