--- a/misc/index.html
+++ b/misc/index.html
@@ -51,7 +51,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
     
     <div class="row links-and-content">
 
-      <div class="home-page-links col-sm-3 text-left" id="homePageLinksContent"></div>
+      <div class="home-page-links col-sm-3 text-left hidden-xs" id="homePageLinksContent"></div>
 
       <div class="page-content col-sm-9">
 
