added download link for resume, have not uploaded resume yet.

--- a/contact/index.html
+++ b/contact/index.html
@@ -71,7 +71,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
                 <br><br>
                 All other social media links available at page footer.
                 <br><br>
-                Resume available here.
+                Resume available <a href="/images/prof_pic.jpg" download>here</a>.
               </p>
             </div>
           </div>
