--- a/contact/index.html
+++ b/contact/index.html
@@ -66,12 +66,10 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
             <div class="page-content-item-text">
               <p>
                 email: chendavid96@gmail.com
-                <br>
-                github: @chendavid96
-                <br><br>
-                All other social media links available at page footer.
                 <br><br>
                 Resume available <a href="/images/prof_pic.jpg" download>here</a>.
+                <br><br>
+                All other contact links are available at page footer.
               </p>
             </div>
           </div>
