--- a/resources/primary-footer.html
+++ b/resources/primary-footer.html
@@ -1,9 +1,9 @@
 <div class="container text-center">
   <h5 class="text-center text-muted">
-    <a href="facebook"><i class="fa fa-facebook"></i></a>
-    <a href="dribbble"><i class="fa fa-dribbble"></i></a>
-    <a href="linkedin"><i class="fa fa-linkedin"></i></a>
-    <a href="instagram"><i class="fa fa-instagram"></i></a>
-    <a href="stack"><i class="fa fa-stack-overflow"></i></a>
+    <a target="_blank" href="https://github.com/davidchen"><i class="fa fa-github"></i></a>
+    <a target="_blank" href="http://stackoverflow.com/users/6086187/david-chen" ><i class="fa fa-stack-overflow"></i></a>
+    <a target="_blank" href="https://linkedin.com/in/david-chen-a881b19b" ><i class="fa fa-linkedin"></i></a>
+    <a target="_blank" href="https://instagram.com/dchen.jpg"><i class="fa fa-instagram"></i></a>
+    <a target="_blank" href="https://twitter.com/chendavid96"><i class="fa fa-twitter"></i></a>
   </h5>
 </div>
