misc -> changed to being updated

--- a/misc/index-original.html
+++ b/misc/index-original.html
@@ -61,7 +61,42 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
 
           <div class="misc-content">
             <div class="page-content-item-title">
-              <h3>This page is being updated.</h3>
+              <h3>Photography</h3>
+            </div>
+            <div class="misc-section-content">
+              <div class="row">
+                <div class="col-sm-6"><img src="/misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                <div class="col-sm-6">
+                  <div class="row">
+                    <div class="col-sm-6"><img src="/misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                    <div class="col-sm-6"><img src="/misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                  </div>
+
+                  <div class="row top-buffer">
+                    <div class="col-sm-6"><img src="/misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                    <div class="col-sm-6"><img src="/misc/photography/img-1.JPG" alt="Example" class="misc-photo"></div>
+                  </div>
+
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="misc-content">
+            <div class="page-content-item-title">
+              <h3>Graphic Design</h3>
+            </div>
+            <div class="misc-section-content">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus rem ut laudantium, laboriosam necessitatibus itaque eum perspiciatis voluptatum, beatae at, quasi ipsa. Delectus minima dicta laboriosam eius consectetur possimus nam error, praesentium quod asperiores architecto, eos commodi nisi tenetur, consequuntur saepe dolore fuga omnis officia vel id iusto eum? Eos.
+              </p>
+            </div>
+          </div>
+
+          <div class="misc-content">
+            <div class="page-content-item-title">
+              <h3>Videography</h3>
             </div>
             <div class="misc-section-content">
               <p>
