dynamic tag clone from main project page to specified project page

--- a/projects/index.html
+++ b/projects/index.html
@@ -71,6 +71,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
               <button type="button" class="btn btn-default btn-xs tag-button">python</button>
               <button type="button" class="btn btn-default btn-xs tag-button">math</button>
               <button type="button" class="btn btn-default btn-xs tag-button">euler</button>
+              <button type="button" class="btn btn-default btn-xs tag-button">ongoing</button>
             </div>
 
             <div class="page-content-item-text">
@@ -81,6 +82,10 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
           </div>
 
           <!-- Lead page item element ends here. -->
+          
+
+
+
           
           <!-- All page item elements end here -->
 
