--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -59,7 +59,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
 
           <!-- Page content begins here. -->
 
-          <div class="page-content-item">
+          <div class="page-content-item tag-grab-recipient">
 
             <!-- Page title -->
             <div class="page-content-item-title">
@@ -67,10 +67,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
             </div>
 
             <!-- Page tags -->
-            <div class="page-content-item-tags"> 
-              <button type="button" class="btn btn-default btn-xs tag-button">python</button>
-              <button type="button" class="btn btn-default btn-xs tag-button">math</button>
-              <button type="button" class="btn btn-default btn-xs tag-button">euler</button>
+            <div class="page-content-item-tags">
             </div>
 
             <!-- Page text -->
