added fade in effect for page load and changed some contact info text

--- a/contact/index.html
+++ b/contact/index.html
@@ -65,7 +65,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
             </div>
             <div class="page-content-item-text">
               <p>
-                email: chendavid96@gmail.com
+                E-mail: chendavid96@gmail.com
                 <br><br>
                 Resume available <a href="/images/prof_pic.jpg" download>here</a>.
                 <br><br>
