started blog html file and made home page's links load from js

--- a/contact/index.html
+++ b/contact/index.html
@@ -63,11 +63,11 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
             <div class="page-content-item-title">
               <h3>Contact Information</h3>
             </div>
-            <div class="page-content-item-text">
+            <div class="contact-content">
               <p>
-                E-mail: chendavid96@gmail.com
-                <br><br>
-                Resume available <a href="/images/prof_pic.jpg" download>here</a>.
+                <strong>E-mail: </strong>chendavid96@gmail.com
+                <br>
+                <strong>Resume: </strong>available <a href="/images/prof_pic.jpg" download>here</a>.
                 <br><br>
                 All other contact links are available at page footer.
               </p>
