--- a/resources/primary-page-links.html
+++ b/resources/primary-page-links.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-sm-12"><h4 class="home-page-link"><a href="/projects">projects</a></h4></div>
-	<div class="col-sm-12"><h4 class="home-page-link"><a href="/blog"><s>blog</s></a></h4></div>
+	<div class="col-sm-12"><h4 class="home-page-link"><a href="/blog">blog</a></h4></div>
 	<div class="col-sm-12"><h4 class="home-page-link"><a href="/misc">misc</a></h4></div>
 	<div class="col-sm-12"><h4 class="home-page-link"><a href="/contact">contact</a></h4></div>
 </div>
