--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="/js/fontawesome.js"></script>
-  <script src="/js/jquery.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
-  <script src="/js/custom.js"></script>
-
   <title>dchen.io</title>
-  
-  <!-- Bootstrap -->
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/css/custom-style.css">
+
+  <script src="/js/fa-jq-bs.min.js"></script>
+  <script src="/js/custom.js"></script>
+  <link rel="stylesheet" type="text/css" href="/css/custom-style.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
