--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <script src="/js/fa-jq-bs.min.js"></script>
   <script src="/js/custom.js"></script>
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/css/custom-style.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
