--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
+<head>                                                                                                                                                                
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://use.fontawesome.com/de05a4e1f9.js"></script>
-  <script src="/js/jquery.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
-  <script src="/js/custom.js"></script>
-  
   <title>dchen.io</title>
-  
-  <!-- Bootstrap -->
+
+  <script src="/js/fa-jq-bs.min.js"></script>
+  <script src="/js/custom.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/css/custom-style.css">
+  <link rel="stylesheet" type="text/css" href="/css/custom-style.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
