minified so many things

--- a/index.html
+++ b/index.html
@@ -1,18 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>                                                                                                                                                                
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>dchen.io</title>
-
-  <script src="/js/fa-jq-bs.min.js"></script>
-  <script src="/js/custom.js"></script>
-  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/css/custom-style.min.css">
-  <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
-</head>
-<body>
   <!--                                                                                                   
                                                                       ,                                                                                                 
     :;     :;.    `;:     `.       ..        ....                    @@       `@,          ,;;. @@                                                                      
@@ -40,8 +26,20 @@
  @@@@@                                                                                                                                                                  
  :++,
 
-Please don't use my code without my permission. Or just steal it. I don't care. -Insert crying emoji-.
- -->   
+Please don't use my code without my permission. Or just steal it. I don't care. -Insert crying emoji-. --> 
+<html lang="en">
+<head>                                                                                                                                                                
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>dchen.io</title>
+
+  <script src="/js/fa-jq-bs.min.js"></script>
+  <script src="/js/custom.js"></script>
+  <link rel="stylesheet" type="text/css" href="/css/custom-style.min.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
+</head>
+<body>  
   <div class="container">
     <div class="row text-center title-text"><h1>David Chen</h1><h4>software developer</h4></div>
     
