--- a/misc/index.html
+++ b/misc/index.html
@@ -36,7 +36,8 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
 
   <script src="/js/fa-jq-bs.min.js"></script>
   <script src="/js/custom.js"></script>
-  <link rel="stylesheet" type="text/css" href="/css/custom-style.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/custom-style.css">
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>  
