--- a/projects/index.html
+++ b/projects/index.html
@@ -35,9 +35,12 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
   <title>dchen.io</title>
 
   <script src="/js/fa-jq-bs.min.js"></script>
+  <script src="/js/highlight.min.js"></script>
   <script src="/js/custom.js"></script>
+
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/css/custom-style.css">
+  <link rel="stylesheet" type="text/css" href="/css/highlight-github.css">
   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
