--- a/resources/primary-top-title.html
+++ b/resources/primary-top-title.html
@@ -2,7 +2,7 @@
 <div class="row hidden-sm hidden-md hidden-lg sm-size-link-wrap">
 	<div class="col-xs-2"></div>
 	<div class="col-xs-4"><a href="/projects"><h5 class="sm-size-link">projects</h5></a></div>
-	<div class="col-xs-4"><a href="/blog"><h5 class="sm-size-link"><s>blog</s></h5></a></div>
+	<div class="col-xs-4"><a href="/blog"><h5 class="sm-size-link">blog</h5></a></div>
 	<div class="col-xs-2"></div>
 </div>
 <div class="row hidden-sm hidden-md hidden-lg sm-size-link-wrap">
