finished euler up to #10

--- a/projects/index.html
+++ b/projects/index.html
@@ -74,7 +74,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
 
             <div class="page-content-item-text">
               <p>
-                This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 25ish are currently documented here.
+                This is an ongoing project detailing my attempts, solutions, and coding process to the math and programming problems featured on the Project Euler website. Problems 1 through 10 are currently documented here.
               </p>
             </div>
           </div>
