--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -71,7 +71,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
             <!-- Page text -->
             <div class="project-content">
 
-              <p>Some questions have been shortened for succinctness. Last updated August 21, 2016.</p>
+              <p>Some questions have been shortened for succinctness. Last updated September 05, 2016.</p>
               <div class="row">
                 <div class="col-xs-12 euler-anchor-links"></div>
               </div>
@@ -267,16 +267,17 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
               <br>
               <p>We implement a sliding window with <code>n = 4</code> because of the adjacency necessity and keep track of the max product found.</p>
               <pre><code>def euler8():
-    num_str = '73167176531330624919225119674426574742355349194934969835203127745063262395783180169848018694788518438586' \
-              '15607891129494954595017379583319528532088055111254069874715852386305071569329096329522744304355766896648' \
-              '95044524452316173185640309871112172238311362229893423380308135336276614282806444486645238749303589072962' \
-              '90491560440772390713810515859307960866701724271218839987979087922749219016997208880937766572733300105336' \
-              '78812202354218097512545405947522435258490771167055601360483958644670632441572215539753697817977846174064' \
-              '95514929086256932197846862248283972241375657056057490261407972968652414535100474821663704844031998900088' \
-              '95243450658541227588666881164271714799244429282308634656748139191231628245861786645835912456652947654568' \
-              '28489128831426076900422421902267105562632111110937054421750694165896040807198403850962455444362981230987' \
-              '87992724428490918884580156166097919133875499200524063689912560717606058861164671094050775410022569831552' \
-              '0005593572972571636269561882670428252483600823257530420752963450'
+    num_str = \
+    '73167176531330624919225119674426574742355349194934969835203127745063262395783180169848018694788518438586' \
+    '15607891129494954595017379583319528532088055111254069874715852386305071569329096329522744304355766896648' \
+    '95044524452316173185640309871112172238311362229893423380308135336276614282806444486645238749303589072962' \
+    '90491560440772390713810515859307960866701724271218839987979087922749219016997208880937766572733300105336' \
+    '78812202354218097512545405947522435258490771167055601360483958644670632441572215539753697817977846174064' \
+    '95514929086256932197846862248283972241375657056057490261407972968652414535100474821663704844031998900088' \
+    '95243450658541227588666881164271714799244429282308634656748139191231628245861786645835912456652947654568' \
+    '28489128831426076900422421902267105562632111110937054421750694165896040807198403850962455444362981230987' \
+    '87992724428490918884580156166097919133875499200524063689912560717606058861164671094050775410022569831552' \
+    '0005593572972571636269561882670428252483600823257530420752963450'
 
     greatest_prod = 0
 
@@ -309,11 +310,11 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
               <br>
               <p>This question is solved via brute force by utilizing a triple nested for loop. The outer loop iterates from [335, 999] because c > b > a. The middle loop iterates from 1 until the current value of c minus 1, and the inner loop goes from 1 until the current value of b minus 1. </p>
               <pre><code>def euler9():
-    for c in range(335, 1000):  # c has to be at least 335 because c > b > a, so if c < 335: 334+333+332 = 999 < 1000
+    for c in range(335, 1000):  # c has to be at least 335 because c > b > a; if c < 335: 334+333+332 = 999 < 1000
         for b in range(1, c):
             for a in range(1, b):
                 if a + b + c == 1000 and\
-                    (a * a) + (b * b) == c * c:  # simple, but we make sure the addition check is first so we don't waste runtime
+                    (a * a) + (b * b) == c * c:  # make sure the addition check is first as it is faster
                     return a * b * c</code></pre>
               <p>
                 Answer: 31875000
@@ -335,10 +336,10 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
 
     for test_n in range(3, 2000001, 2):  # check up to the limit using odd numbers beginning from 3
         for p in primes:  # for each new number, check against current list of primes
-            if test_n % p == 0:  # if divisible by any number in primes, number is known to be composite and loop breaks
+            if test_n % p == 0:  # if divisible by a number in primes, number is composite and loop breaks
                 break
-            if test_n < p * p:  # we only need to loop up to the first prime that is greater than the square root of n
-                primes.append(test_n)  # if non-composite and passes above condition, this must be a prime number
+            if test_n < p * p:  # only need to loop up to first prime that is greater than square root of n
+                primes.append(test_n)  # if non-composite and passes above condition: must be a prime number
                 break
 
     return sum(primes)</code></pre>
