--- a/projects/project-euler.html
+++ b/projects/project-euler.html
@@ -71,7 +71,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
             <!-- Page text -->
             <div class="project-content">
 
-              <p>Some questions have been shortened for succinctness. Last updated September 05, 2016.</p>
+              <p>Some questions have been shortened for succinctness. Last updated September 06, 2016.</p>
               <div class="row">
                 <div class="col-xs-12 euler-anchor-links"></div>
               </div>
@@ -201,9 +201,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
                 <br><br>
                 (1 + 2 + ... + 10)<sup>2</sup> = 55<sup>2</sup> = 3025
                 <br><br>
-                Hence the difference between the sum of the squares of the first ten natural numbers and the square of the sum is 3025 − 385 = 2640.
-                <br><br>
-                Find the difference between the sum of the squares of the first one hundred natural numbers and the square of the sum.
+                Hence the difference between the sum of the squares of the first ten natural numbers and the square of the sum is 3025 − 385 = 2640. Find the difference between the sum of the squares of the first one hundred natural numbers and the square of the sum.
               </em></p>
               <br>
               <p>Use for loops to find both initial numbers, and then subtract.</p>
@@ -227,9 +225,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
               
               <h4 class="euler-problem-title">Problem 7 - 10001st prime</h4>
               <p><em>
-                By listing the first six prime numbers: 2, 3, 5, 7, 11, and 13, we can see that the 6th prime is 13.
-                <br><br>
-                What is the 10001st prime number?
+                By listing the first six prime numbers: 2, 3, 5, 7, 11, and 13, we can see that the 6th prime is 13. What is the 10001st prime number?
               </em></p>
               <br>
               <p>One method of tackling this problem is simply looping through until we hit the 10001st prime (brute force). The other method is as follows: keep a list of all the primes found starting from 2 and loop indefinitely until we reach a number that is not divisible by any of the numbers within the prime list. If that happens, add that number to the prime list because it must be prime (since all composite numbers are made up of some number of primes). Furthermore, instead of checking through the whole prime list to see if that number is prime, we can check to see if the square root of the unknown number is less than the current prime iteration, i.e., the unknown number is less than the prime squared, which will cut down our search time.</p>
@@ -297,15 +293,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
 
               <h4 class="euler-problem-title">Problem 9 - Special Pythagorean triplet</h4>
               <p><em>
-                A Pythagorean triplet is a set of three natural numbers, a < b < c, for which,
-                <br><br>
-                a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup>
-                <br><br>
-                For example, 3<sup>2</sup> + 4<sup>2</sup> = 9 + 16 = 25 = 5<sup>2</sup>.
-                <br><br>
-                There exists exactly one Pythagorean triplet for which a + b + c = 1000.
-                <br><br>
-                Find the product a × b × c.
+                A Pythagorean triplet is a set of three natural numbers, a < b < c, for which a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup>. For example, 3<sup>2</sup> + 4<sup>2</sup> = 9 + 16 = 25 = 5<sup>2</sup>. There exists exactly one Pythagorean triplet for which a + b + c = 1000. Find the product a × b × c.
               </em></p>
               <br>
               <p>This question is solved via brute force by utilizing a triple nested for loop. The outer loop iterates from [335, 999] because c > b > a. The middle loop iterates from 1 until the current value of c minus 1, and the inner loop goes from 1 until the current value of b minus 1. </p>
@@ -325,9 +313,7 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
 
               <h4 class="euler-problem-title">Problem 10 - Summation of primes</h4>
               <p><em>
-                The sum of the primes below 10 is 2 + 3 + 5 + 7 = 17.
-                <br><br>
-                Find the sum of all the primes below two million.
+                The sum of the primes below 10 is 2 + 3 + 5 + 7 = 17. Find the sum of all the primes below two million.
               </em></p>
               <br>
               <p>We use the code for problem 7 in order to quickly find the primes up to two million. We then simply return the sum. Much faster and more efficient algorithms involve implementing the Sieve of Eratosthenes or Sieve of Atkin.</p>
@@ -343,6 +329,123 @@ Please don't use my code without my permission. Or just steal it. I don't care. 
                 break
 
     return sum(primes)</code></pre>
+              <p>
+                Answer: 142913828922
+                <br>
+                Average Runtime: 2.6625816 seconds
+              </p>
+              <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+              <h4 class="euler-problem-title">Problem 11 - Largest product in a grid</h4>
+              <p><em>
+                In the 20×20 grid below, four numbers along a diagonal line have been marked in red (grid is redacted here; view in the code block below). The product of these numbers is 26 × 63 × 78 × 14 = 1788696. What is the greatest product of four adjacent numbers in the same direction (up, down, left, right, or diagonally) in the 20×20 grid?
+              </em></p>
+              <br>
+              <p>The hardest part of this problem is converting the grid in the problem into a workable 2D matrix so that we can find the max. For the non-diagonal products, we simply use both a horizontal and vertical sliding window algorithm to generate all possible products and keep track of the max. The diagonal products only require a slightly modified constraint in that the limit to which we loop is if the x and y position of the number we're currently on are both less than 17 (since the max of the numbers we need to multiply is at most 4 units horizontally away or 4 unit vertically away).</p>
+              <pre><code>def euler11():
+    max_num = 0
+    numbers = [
+        [8, 2, 22, 97, 38, 15, 0, 40, 0, 75, 4, 5, 7, 78, 52, 12, 50, 77, 91, 8],
+        [49, 49, 99, 40, 17, 81, 18, 57, 60, 87, 17, 40, 98, 43, 69, 48, 4, 56, 62, 0],
+        [81, 49, 31, 73, 55, 79, 14, 29, 93, 71, 40, 67, 53, 88, 30, 3, 49, 13, 36, 65],
+        [52, 70, 95, 23, 4, 60, 11, 42, 69, 24, 68, 56, 1, 32, 56, 71, 37, 2, 36, 91],
+        [22, 31, 16, 71, 51, 67, 63, 89, 41, 92, 36, 54, 22, 40, 40, 28, 66, 33, 13, 80],
+        [24, 47, 32, 60, 99, 3, 45, 2, 44, 75, 33, 53, 78, 36, 84, 20, 35, 17, 12, 50],
+        [32, 98, 81, 28, 64, 23, 67, 10, 26, 38, 40, 67, 59, 54, 70, 66, 18, 38, 64, 70],
+        [67, 26, 20, 68, 2, 62, 12, 20, 95, 63, 94, 39, 63, 8, 40, 91, 66, 49, 94, 21],
+        [24, 55, 58, 5, 66, 73, 99, 26, 97, 17, 78, 78, 96, 83, 14, 88, 34, 89, 63, 72],
+        [21, 36, 23, 9, 75, 0, 76, 44, 20, 45, 35, 14, 0, 61, 33, 97, 34, 31, 33, 95],
+        [78, 17, 53, 28, 22, 75, 31, 67, 15, 94, 3, 80, 4, 62, 16, 14, 9, 53, 56, 92],
+        [16, 39, 5, 42, 96, 35, 31, 47, 55, 58, 88, 24, 0, 17, 54, 24, 36, 29, 85, 57],
+        [86, 56, 0, 48, 35, 71, 89, 7, 5, 44, 44, 37, 44, 60, 21, 58, 51, 54, 17, 58],
+        [19, 80, 81, 68, 5, 94, 47, 69, 28, 73, 92, 13, 86, 52, 17, 77, 4, 89, 55, 40],
+        [4, 52, 8, 83, 97, 35, 99, 16, 7, 97, 57, 32, 16, 26, 26, 79, 33, 27, 98, 66],
+        [88, 36, 68, 87, 57, 62, 20, 72, 3, 46, 33, 67, 46, 55, 12, 32, 63, 93, 53, 69],
+        [4, 42, 16, 73, 38, 25, 39, 11, 24, 94, 72, 18, 8, 46, 29, 32, 40, 62, 76, 36],
+        [20, 69, 36, 41, 72, 30, 23, 88, 34, 62, 99, 69, 82, 67, 59, 85, 74, 4, 36, 16],
+        [20, 73, 35, 29, 78, 31, 90, 1, 74, 31, 49, 71, 48, 86, 81, 16, 23, 57, 5, 54],
+        [1, 70, 54, 71, 83, 51, 54, 69, 16, 92, 33, 48, 61, 43, 52, 1, 89, 19, 67, 48]
+    ]
+
+    for i_x in range(0, 20):
+        for i_y in range(0, 17):
+            h_product = numbers[i_x][i_y] * numbers[i_x][i_y + 1] * numbers[i_x][i_y + 2] * numbers[i_x][i_y + 3]
+            v_product = numbers[i_y][i_x] * numbers[i_y + 1][i_x] * numbers[i_y + 2][i_x] * numbers[i_y + 3][i_x]
+            d_product_1 = d_product_2 = 0
+
+            if i_x < 17:
+                d_product_1 = numbers[i_x][i_y] * numbers[i_x + 1][i_y + 1] * numbers[i_x + 2][i_y + 2] * \
+                              numbers[i_x + 3][i_y + 3]
+                d_product_2 = numbers[i_y + 3][i_x] * numbers[i_y + 2][i_x + 1] * numbers[i_y + 1][i_x + 2] * \
+                              numbers[i_y][i_x + 3]
+
+            max_num = max(max_num, h_product, v_product, d_product_1, d_product_2)
+
+    return max_num</code></pre>
+              <p>
+                Answer: 70600674
+                <br>
+                Average Runtime: 0.0003273 seconds
+              </p>
+              <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+              <h4 class="euler-problem-title">Problem 12 - Highly divisible triangular number</h4>
+              <p><em>
+                The sum of the primes below 10 is 2 + 3 + 5 + 7 = 17.
+                <br><br>
+                Find the sum of all the primes below two million.
+              </em></p>
+              <br>
+              <p>We use the code for problem 7 in order to quickly find the primes up to two million. We then simply return the sum. Much faster and more efficient algorithms involve implementing the Sieve of Eratosthenes or Sieve of Atkin.</p>
+              <pre><code>example</code></pre>
+              <p>
+                Answer: 142913828922
+                <br>
+                Average Runtime: 2.6625816 seconds
+              </p>
+              <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+              <h4 class="euler-problem-title">Problem 13 - Large sum</h4>
+              <p><em>
+                The sum of the primes below 10 is 2 + 3 + 5 + 7 = 17.
+                <br><br>
+                Find the sum of all the primes below two million.
+              </em></p>
+              <br>
+              <p>We use the code for problem 7 in order to quickly find the primes up to two million. We then simply return the sum. Much faster and more efficient algorithms involve implementing the Sieve of Eratosthenes or Sieve of Atkin.</p>
+              <pre><code>example</code></pre>
+              <p>
+                Answer: 142913828922
+                <br>
+                Average Runtime: 2.6625816 seconds
+              </p>
+              <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+              <h4 class="euler-problem-title">Problem 14 - Longest Collatz sequence</h4>
+              <p><em>
+                The sum of the primes below 10 is 2 + 3 + 5 + 7 = 17.
+                <br><br>
+                Find the sum of all the primes below two million.
+              </em></p>
+              <br>
+              <p>We use the code for problem 7 in order to quickly find the primes up to two million. We then simply return the sum. Much faster and more efficient algorithms involve implementing the Sieve of Eratosthenes or Sieve of Atkin.</p>
+              <pre><code>example</code></pre>
+              <p>
+                Answer: 142913828922
+                <br>
+                Average Runtime: 2.6625816 seconds
+              </p>
+              <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+              <h4 class="euler-problem-title">Problem 15 - Lattice paths</h4>
+              <p><em>
+                The sum of the primes below 10 is 2 + 3 + 5 + 7 = 17.
+                <br><br>
+                Find the sum of all the primes below two million.
+              </em></p>
+              <br>
+              <p>We use the code for problem 7 in order to quickly find the primes up to two million. We then simply return the sum. Much faster and more efficient algorithms involve implementing the Sieve of Eratosthenes or Sieve of Atkin.</p>
+              <pre><code>example</code></pre>
               <p>
                 Answer: 142913828922
                 <br>
